# module.python-config

./: .env.example  .gitignore  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  __init__.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.build.txt  requirements.core.txt  requirements.dev.txt  requirements.pydantic-v2.txt  requirements.test.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: 1.bump-version.yml  2.build-publish.yml  3.update-changelog.yml
docs/: README.md
docs/diagrams/call-graphs/: cgraph_onion_config.gv
docs/diagrams/classes/: classes_onion_config.html
docs/pages/about/: license.md
docs/pages/api-docs/: ConfigLoader.md  README.md  diagrams.md
docs/pages/dev/: file-structure.md  sitemap.md  test.md
docs/pages/getting-started/: configuration.md  error-codes.md  examples.md  installation.md  prerequisites.md
docs/scripts/: 1.base.md  2.clean.md  3.get-version.md  4.test.md  5.bump-version.md  6.build.md  README.md
examples/: .env  main.py  requirements.txt
examples/advanced/: .env.base  .env.prod  app.py  config.py  logger.py  main.py  schema.py
examples/advanced/configs/: config.yml  logger.json
examples/advanced/configs_2/: config.yml  config_2.yml
examples/advanced/extra_configs/: extra.json
examples/configs/: config.yml  logger.json
examples/simple/: main.py
examples/simple/configs/: 1.base.yml  2.extra.yml
onion_config/: __init__.py  __version__.py  _base.py  _const.py  _schema.py  _utils.py  base.py
pages/: index.html
pages/about/: index.html
pages/about/authors/: index.html
pages/about/contact/: index.html
pages/about/faq/: index.html
pages/about/license/: index.html
pages/api-docs/: index.html
pages/dev/: index.html
pages/dev/cicd/: index.html
pages/getting-started/: index.html
pages/release-notes/: index.html
requirements/: requirements.build.txt  requirements.core.txt  requirements.dev.txt  requirements.pydantic-settings.txt  requirements.pydantic-v1.txt  requirements.test.txt
scripts/: base.sh  build.sh  bump-version.sh  clean.sh  diagrams.sh  get-version.sh  test.sh
search/: search_index.json
src/onion_config/: _base.py  _consts.py  _schemas.py
tests/: test_onion_config.py
(+26 files in other folders)
